[gd_scene load_steps=3 format=3 uid="uid://dguiyw0ml8lme"]

[ext_resource type="Script" uid="uid://nlfkljpg6yd6" path="res://Scenes/Interactable/interactable_area.gd" id="1_xxlc1"]

[sub_resource type="CircleShape2D" id="CircleShape2D_xxlc1"]
radius = 35.5106

[node name="InteractComponent" type="Area2D"]
script = ExtResource("1_xxlc1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2(1.84814, 1.84814)
shape = SubResource("CircleShape2D_xxlc1")

[node name="place_text" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -27.0
offset_top = -93.0
offset_right = 28.0
offset_bottom = -70.0
grow_horizontal = 2
grow_vertical = 2
text = "Press E (Place Item)"

[node name="ItemDisplay" type="Sprite2D" parent="."]

[node name="pickup_text" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -80.0
offset_top = -94.0
offset_right = 81.0
offset_bottom = -71.0
grow_horizontal = 2
grow_vertical = 2
text = "Press E (Pickup Item)"
